# SimpleRAT

./: README.md
client/: Cargo.toml  build.rs
client/src/: main.rs
client/src/core/: application.rs  mod.rs
client/src/core/channel/: http_api.rs  mod.rs  tcp_api.rs  udp_api.rs
client/src/core/common/: config.rs  mod.rs  network_type.rs
client/src/core/model/: mod.rs
client/src/core/util/: aes_util.rs  device_util.rs  fs_util.rs  mod.rs  network.rs  sys_util.rs
server/: generate.sql  pom.xml
server/src/main/java/com/evil/rs/: RsApplication.java
server/src/main/java/com/evil/rs/advice/: DecryptRequest.java  EncryptResult.java  GlobalExceptionAdvice.java
server/src/main/java/com/evil/rs/annotation/: Decrypt.java  Encrypt.java
server/src/main/java/com/evil/rs/config/: ConstConfig.java  (+8 more)
server/src/main/resources/: application.yml
ui/: pubspec.yaml
ui/lib/: main.dart
ui/lib/api/: auth_api.dart  chat_api.dart  command_api.dart
ui/lib/controller/: auth_controller.dart  command_controller.dart  log_event_controller.dart  socket_controller.dart  terminal_controller.dart
ui/lib/model/: AuthInformation.dart  ChatMessage.dart  Machine.dart  NotifyMessage.dart  PageQuery.dart  Result.dart  Task.dart
ui/lib/pages/: home.dart  main_page.dart
ui/lib/util/: action_enum.dart  const_util.dart  my_icon.dart  request_interceptor.dart  request_util.dart  tips_util.dart
ui/lib/widgets/: ToolBar.dart  head_bar.dart
ui/lib/widgets/head/: LogEventWidget.dart  TaskListWidget.dart
ui/lib/widgets/main/: informationWidget.dart  terminal_widget.dart
(+43 files in other folders)
